--- a/maps.html
+++ b/maps.html
@@ -3,8 +3,8 @@
 
 <head>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="maps.js" type="text/javascript"></script>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <script src="js/maps.js" type="text/javascript"></script>
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <h3>Link doc google</h3>
-    <p>https://developers.google.com/maps/documentation/javascript/shapes?hl=pt-br</p>
+    <!-- <p>https://developers.google.com/maps/documentation/javascript/shapes?hl=pt-br</p> -->
     <div id="floating-panel">
         <input onclick="removeLine();" type=button value="Remove line">
         <input onclick="addLine();" type=button value="Restore line">
