Adequacao de arquivo, criacao de novos eventos, criacao de documento sigo com comentarios e modificação de linguagem

--- a/desenho.html
+++ b/desenho.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/desenho.js" type="text/javascript"></script>
+	<script src="js/inicioSigo.js" type="text/javascript"></script>
 	<link href="css/index.css" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8">
 </head>
@@ -17,7 +18,7 @@
 	<div id="map"></div>
 
 	<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCR03RvG16Q9Wd-sZQLUOu-8gNepvQXtj0&libraries=drawing&callback=initMap">
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCR03RvG16Q9Wd-sZQLUOu-8gNepvQXtj0&libraries=drawing&callback=iniciaMapa">
 	</script>
 </body>
 </html>
