criacao e modelagem de desenhos default

--- a/desenho.html
+++ b/desenho.html
@@ -14,8 +14,8 @@
 		<label for="address">Digite a cidade que deseja que o mapa centralize:</label>
 		<input id="address" type="textbox" value="Jaraguá, Belo Horizonte, Minas Gerias, Brasil">
 		<input type="button" value="Buscar" onclick="codigoEndereco()">
+		<input type="button" value="Ativar PHP" onclick="buscaCercasCadastradas()">
 	</div>
-	
 	<div id="map"></div>
 
 	<script async defer
