funcao de geofence feita a mao, no php validarPonto usando funcoes de seno, cosseno e outras mais

--- a/desenho.html
+++ b/desenho.html
@@ -15,6 +15,7 @@
 		<input id="address" type="textbox" value="Jaraguá, Belo Horizonte, Minas Gerias, Brasil">
 		<input type="button" value="Buscar" onclick="codigoEndereco()">
 		<input type="button" value="Ativar PHP" onclick="buscaCercasCadastradas()">
+		<input type="button" value="Ativar PHP Cerca" onclick="testeValidaPonto()">
 	</div>
 	<div id="map"></div>
 
